# ignis-inference-CA

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-04-11-ignisca-data-pipeline.md  2026-04-12-ignisca-model-training.md
docs/specs/: 2026-04-11-ignisca-design.md  2026-04-13-ignisca-eval-reporting-design.md
docs/superpowers/plans/: 2026-04-13-ignisca-eval-reporting.md
scripts/: evaluate.py  preprocess.py  report_ablation.py  run_ablation.py  run_sweep.py  train.py
src/ignisca/data/: cache.py  dataset.py  features.py  grid.py  holdout.py
src/ignisca/evaluation/: aggregate.py  failure.py  metrics.py  reporting.py  runner.py  slicing.py
src/ignisca/inference/: mc_dropout.py
src/ignisca/models/: resunet.py  router.py
src/ignisca/reporting/: wandb_sync.py
src/ignisca/training/: ablation.py  config.py  loop.py  losses.py  metrics.py
tests/: conftest.py  test_conftest_smoke.py  test_preprocess_integration.py  test_smoke.py
tests/data/: test_cache.py  test_dataset.py  test_features.py  test_grid.py  test_holdout.py
tests/data/sources/: test_dem.py  test_firms_nrt.py  test_hrrr.py  test_landfire.py  test_ndws.py  test_nifc.py  test_viirs.py
tests/evaluation/: fake_dataset.py  test_aggregate.py  test_failure.py  test_metrics.py  test_reporting.py  test_runner.py  test_slicing.py
tests/evaluation/fixtures/: headline.md
tests/inference/: test_mc_dropout.py
tests/models/: test_resunet.py  test_router.py
tests/reporting/: test_wandb_sync.py
tests/training/: test_ablation.py  test_loop.py  test_losses.py  test_metrics.py
(+7 files in other folders)
